--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,10 +21,9 @@
             android:layout_height="match_parent"
             app:collapsedTitleTextColor="@color/white"
             app:contentScrim="@color/ppMain"
-            app:statusBarScrim="@color/ppMain"
-
             app:expandedTitleTextColor="@color/white"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:statusBarScrim="@color/ppMain"
             app:titleCollapseMode="scale"
             app:toolbarId="@id/activity_main_toolbar">
 
@@ -34,8 +33,8 @@
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax"
-                android:src="@color/ppMain"/>
+                android:src="@color/ppMain"
+                app:layout_collapseMode="parallax" />
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/activity_main_toolbar"
