--- a/app/src/main/res/layout/fragment_trip_details.xml
+++ b/app/src/main/res/layout/fragment_trip_details.xml
@@ -54,31 +54,59 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:paddingBottom="8dp">
 
                 <TextView
                     android:id="@+id/details_start_station"
-                    style="@style/TextAppearance.MaterialComponents.Headline5"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="4"
-                    android:gravity="center_horizontal|center_vertical" />
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
+                    style="@style/TextAppearance.MaterialComponents.Headline2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:contentDescription="@string/arrow"
-                    android:src="@drawable/ic_baseline_arrow_right_alt_24" />
+                    android:gravity="center_horizontal|center_vertical"
+                    android:textSize="36sp" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="62dp"
+                    android:orientation="horizontal">
+
+
+                    <TextView
+                        android:id="@+id/details_trip_duration"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="16dp"
+                        android:layout_weight="6"
+                        android:gravity="end|center_vertical" />
+
+
+                    <ImageView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:contentDescription="@string/arrow"
+                        android:scaleType="fitXY"
+                        android:src="@drawable/ic_baseline_south_24" />
+
+                    <TextView
+                        android:id="@+id/details_trip_distance"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="16dp"
+                        android:layout_weight="6"
+                        android:gravity="start|center_vertical" />
+                </LinearLayout>
+
 
                 <TextView
                     android:id="@+id/details_end_station"
-                    style="@style/TextAppearance.MaterialComponents.Headline5"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="4"
-                    android:gravity="center_horizontal|center_vertical" />
+                    style="@style/TextAppearance.MaterialComponents.Headline2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:textSize="36sp" />
             </LinearLayout>
 
 
@@ -110,19 +138,7 @@
                 android:orientation="horizontal"
                 android:paddingBottom="12dp">
 
-                <TextView
-                    android:id="@+id/details_trip_duration"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:textAlignment="center" />
 
-                <TextView
-                    android:id="@+id/details_trip_distance"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:textAlignment="center" />
             </LinearLayout>
 
             <LinearLayout
