--- a/app/src/main/res/layout/fragment_trip_details.xml
+++ b/app/src/main/res/layout/fragment_trip_details.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingBottom="8dp">
+                android:padding="12dp">
 
                 <!--                <TextView-->
                 <!--                    android:id="@+id/details_train_brand"-->
@@ -35,7 +35,7 @@
                 <TextView
                     android:id="@+id/details_train_full_name"
                     style="@style/TextAppearance.MaterialComponents.Headline4"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:textAlignment="center" />
@@ -57,14 +57,38 @@
                 android:orientation="vertical"
                 android:paddingBottom="8dp">
 
-                <TextView
-                    android:id="@+id/details_start_station"
-                    style="@style/TextAppearance.MaterialComponents.Headline2"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:textSize="36sp" />
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:paddingVertical="8dp">
+
+                    <TextView
+                        android:id="@+id/details_start_station"
+                        style="@style/TextAppearance.MaterialComponents.Headline2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal|center_vertical"
+                        android:textSize="36sp" />
+
+                    <TextView
+                        android:id="@+id/details_departure_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="4"
+                        android:gravity="center_horizontal|center_vertical" />
+
+                    <TextView
+                        android:id="@+id/details_departure_time_delayed"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="4"
+                        android:gravity="center_horizontal|center_vertical" />
+
+
+                </LinearLayout>
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -73,13 +97,15 @@
 
 
                     <TextView
-                        android:id="@+id/details_trip_duration"
+                        android:id="@+id/details_trip_distance"
                         android:layout_width="wrap_content"
+
                         android:layout_height="match_parent"
                         android:layout_marginEnd="16dp"
                         android:layout_weight="6"
-                        android:gravity="end|center_vertical" />
-
+                        android:fontFamily="sans-serif-light"
+                        android:gravity="end|center_vertical"
+                        android:textSize="16sp" />
 
                     <ImageView
                         android:layout_width="0dp"
@@ -90,23 +116,50 @@
                         android:src="@drawable/ic_baseline_south_24" />
 
                     <TextView
-                        android:id="@+id/details_trip_distance"
+                        android:id="@+id/details_trip_duration"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_marginStart="16dp"
                         android:layout_weight="6"
-                        android:gravity="start|center_vertical" />
+                        android:fontFamily="sans-serif-light"
+
+                        android:gravity="start|center_vertical"
+                        android:textSize="16sp" />
+
+
                 </LinearLayout>
 
-
-                <TextView
-                    android:id="@+id/details_end_station"
-                    style="@style/TextAppearance.MaterialComponents.Headline2"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center_horizontal|center_vertical"
-                    android:textSize="36sp" />
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:paddingVertical="8dp">
+
+                    <TextView
+                        android:id="@+id/details_end_station"
+                        style="@style/TextAppearance.MaterialComponents.Headline2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal|center_vertical"
+                        android:textSize="36sp" />
+
+
+                    <TextView
+                        android:id="@+id/details_arrival_time"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="4"
+                        android:gravity="center_horizontal|center_vertical" />
+
+                    <TextView
+                        android:id="@+id/details_arrival_time_delayed"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="4"
+                        android:gravity="center_horizontal|center_vertical" />
+                </LinearLayout>
+
             </LinearLayout>
 
 
@@ -117,18 +170,26 @@
                 android:paddingBottom="12dp">
 
                 <TextView
-                    android:id="@+id/details_departure_time"
+                    android:id="@+id/details_avg_speed"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical|center_horizontal"
                     android:layout_weight="1"
-                    android:textAlignment="center" />
+                    android:fontFamily="sans-serif-light"
+                    android:textAlignment="center"
+                    android:textSize="24sp" />
 
                 <TextView
-                    android:id="@+id/details_arrival_time"
+                    android:id="@+id/details_price_per_km"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical|center_horizontal"
                     android:layout_weight="1"
-                    android:textAlignment="center" />
+                    android:fontFamily="sans-serif-light"
+                    android:textAlignment="center"
+                    android:textSize="24sp" />
+
+
             </LinearLayout>
 
 
@@ -136,15 +197,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:paddingBottom="12dp">
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:paddingVertical="8dp">
 
                 <TextView
                     android:id="@+id/details_has_bike"
@@ -227,7 +280,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:layout_marginStart="12dp"
+        android:layout_marginEnd="12dp"
         android:layout_marginBottom="12dp"
         android:contentDescription="@string/edit_trip_fab"
         android:src="@drawable/ic_baseline_edit_24" />
