--- a/app/src/main/res/layout/fragment_trip_details.xml
+++ b/app/src/main/res/layout/fragment_trip_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,7 +11,7 @@
         android:layout_height="match_parent"
         android:fillViewport="true">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -19,10 +19,12 @@
 
 
             <LinearLayout
+                android:id="@+id/full_name_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="12dp">
+                android:layout_alignParentEnd="true"
+                android:layout_marginVertical="12dp"
+                android:orientation="horizontal">
 
                 <!--                <TextView-->
                 <!--                    android:id="@+id/details_train_brand"-->
@@ -52,16 +54,18 @@
 
 
             <LinearLayout
+                android:id="@+id/station_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/full_name_layout"
                 android:orientation="vertical"
-                android:paddingBottom="8dp">
+                android:paddingBottom="16dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:paddingVertical="8dp">
+                    android:layout_marginVertical="8dp"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/details_start_station"
@@ -101,6 +105,7 @@
                         android:layout_width="wrap_content"
 
                         android:layout_height="match_parent"
+                        android:layout_marginVertical="8dp"
                         android:layout_marginEnd="16dp"
                         android:layout_weight="6"
                         android:fontFamily="sans-serif-light"
@@ -119,10 +124,10 @@
                         android:id="@+id/details_trip_duration"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
+                        android:layout_marginVertical="8dp"
                         android:layout_marginStart="16dp"
                         android:layout_weight="6"
                         android:fontFamily="sans-serif-light"
-
                         android:gravity="start|center_vertical"
                         android:textSize="16sp" />
 
@@ -132,8 +137,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal"
-                    android:paddingVertical="8dp">
+                    android:layout_marginVertical="8dp"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/details_end_station"
@@ -150,7 +155,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="4"
-                        android:gravity="center_horizontal|center_vertical" />
+                        android:gravity="center_horizontal|center_vertical"
+                        android:textAlignment="gravity" />
 
                     <TextView
                         android:id="@+id/details_arrival_time_delayed"
@@ -164,10 +170,12 @@
 
 
             <LinearLayout
+                android:id="@+id/stats_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="12dp">
+                android:layout_below="@id/station_layout"
+                android:layout_marginVertical="8dp"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/details_avg_speed"
@@ -194,10 +202,12 @@
 
 
             <LinearLayout
+                android:id="@+id/icons_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingVertical="8dp">
+                android:layout_below="@id/stats_layout"
+                android:layout_marginVertical="16dp"
+                android:orientation="horizontal">
 
                 <TextView
                     android:id="@+id/details_has_bike"
@@ -233,45 +243,169 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="bottom|start"
-
+                android:layout_alignParentBottom="true"
+                android:gravity="bottom"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/details_summary_title"
+                    style="@style/TextAppearance.MaterialComponents.Subtitle1"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    android:layout_marginVertical="6dp"
+                    android:paddingVertical="2dp"
+                    android:text="COSTS" />
 
-                <TextView
-                    android:id="@+id/details_summary_ticket_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingVertical="2dp">
 
-                <TextView
-                    android:id="@+id/details_summary_bike_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="start"
+                        android:layout_weight="1"
+                        android:fontFamily="sans-serif-light"
+                        android:letterSpacing="0.166666667"
+                        android:text="ticket"
+                        android:textAllCaps="true"
+                        android:textSize="16sp" />
 
-                <TextView
-                    android:id="@+id/details_summary_couchette_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent" />
+
+                    <TextView
+                        android:id="@+id/details_summary_ticket_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="end"
+                        android:layout_weight="1"
+                        android:fontFamily="sans-serif-light"
+                        android:gravity="end"
+                        android:letterSpacing="0.166666667"
+                        android:paddingVertical="2dp"
+                        android:textAlignment="textEnd"
+                        android:textAllCaps="true"
+                        android:textSize="16sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/bike_price_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingVertical="2dp"
+                    android:visibility="gone">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="start"
+                        android:layout_weight="1"
+                        android:fontFamily="sans-serif-light"
+                        android:letterSpacing="0.166666667"
+                        android:text="bike"
+                        android:textAllCaps="true"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/details_summary_bike_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="end"
+                        android:layout_weight="1"
+                        android:fontFamily="sans-serif-light"
+                        android:gravity="end"
+                        android:letterSpacing="0.166666667"
+                        android:textAlignment="textEnd"
+                        android:textAllCaps="true"
+                        android:textSize="16sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/couchette_price_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingVertical="2dp"
+                    android:visibility="gone">
+
+                    <TextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="start"
+                        android:layout_weight="1"
+                        android:fontFamily="sans-serif-light"
+                        android:letterSpacing="0.166666667"
+                        android:text="couchette"
+
+                        android:textAllCaps="true"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/details_summary_couchette_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:fontFamily="sans-serif-light"
+                        android:gravity="end"
+                        android:letterSpacing="0.166666667"
+                        android:textAlignment="textEnd"
+                        android:textAllCaps="true"
+                        android:textSize="16sp" />
+                </LinearLayout>
+
 
                 <View
-                    android:layout_width="150dp"
-                    android:layout_height="3dp"
-                    android:background="#000000" />
+                    android:layout_width="180dp"
+                    android:layout_height="2dp"
+                    android:background="#B2000000"
+                    android:paddingVertical="2dp" />
 
-                <TextView
-                    android:id="@+id/details_summary_whole_price"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingVertical="2dp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="start"
+                        android:layout_weight="1"
+                        android:fontFamily="sans-serif-light"
+                        android:letterSpacing="0.166666667"
+                        android:text="TOTAL "
+                        android:textAllCaps="true"
+                        android:textFontWeight="400"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:id="@+id/details_summary_whole_price"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:fontFamily="sans-serif-light"
+                        android:gravity="end"
+                        android:letterSpacing="0.166666667"
+                        android:textAlignment="textEnd"
+                        android:textAllCaps="true"
+                        android:textFontWeight="400"
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+
             </LinearLayout>
 
 
-        </LinearLayout>
+
+
+        </RelativeLayout>
 
     </androidx.core.widget.NestedScrollView>
 
@@ -279,11 +413,22 @@
         android:id="@+id/edit_trip_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="12dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:contentDescription="@string/edit_trip_fab"
         android:src="@drawable/ic_baseline_edit_24" />
 
+    <View
+        android:id="@+id/fab_oval_view"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
+        android:background="@drawable/animation_oval"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/edit_trip_fab"
+        app:layout_constraintEnd_toEndOf="@+id/edit_trip_fab"
+        app:layout_constraintStart_toStartOf="@+id/edit_trip_fab"
+        app:layout_constraintTop_toTopOf="@+id/edit_trip_fab" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
