--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,8 +3,8 @@
     <item
         android:id="@+id/mainFragment"
         android:enabled="true"
-        android:icon="@drawable/ic_baseline_home_24"
-        android:title="main page" />
+        android:icon="@drawable/monitoring_24"
+        android:title="@string/stats" />
     <item
         android:id="@+id/addTripFormFragment"
         android:enabled="true"
