edit page layout complete

--- a/app/src/main/res/layout/fragment_trip_element.xml
+++ b/app/src/main/res/layout/fragment_trip_element.xml
@@ -6,11 +6,18 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="4dp"
     android:layout_marginBottom="4dp"
-    android:checkable="true"
     android:background="@color/cardview_light_background"
+    android:checkable="true"
     android:clickable="true"
     app:cardCornerRadius="12dp"
     app:cardElevation="8dp">
+
+    <View
+        android:id="@+id/card_rectangle_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/teal_200"
+        android:visibility="invisible" />
 
     <LinearLayout
         android:layout_width="match_parent"
