--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -34,7 +34,7 @@
                 android:layout_gravity="center"
                 android:fontFamily="sans-serif"
                 android:letterSpacing="0.166666667"
-                android:text="Distance travelled"
+                android:text="@string/distance_travelled_km"
                 android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textColor="@color/black"
@@ -113,7 +113,7 @@
                 android:layout_gravity="center"
                 android:fontFamily="sans-serif"
                 android:letterSpacing="0.166666667"
-                android:text="Average perating speed (w/ delays)"
+                android:text="@string/average_operating_speed_w_delays"
                 android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textColor="@color/black"
@@ -151,7 +151,7 @@
                 android:layout_gravity="center"
                 android:fontFamily="sans-serif"
                 android:letterSpacing="0.166666667"
-                android:text="number of travels by carrier"
+                android:text="@string/number_of_travels_by_carrier"
                 android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textColor="@color/black"
@@ -187,7 +187,7 @@
                 android:layout_gravity="center"
                 android:fontFamily="sans-serif"
                 android:letterSpacing="0.166666667"
-                android:text="most popular long haul trains"
+                android:text="@string/most_popular_long_haul_trains"
                 android:textAlignment="center"
                 android:textAllCaps="true"
                 android:textColor="@color/black"
