--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,55 +9,39 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/activity_main_appbar"
-        style="@style/Widget.MaterialComponents.AppBarLayout.Primary"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:fitsSystemWindows="true"
-        android:outlineAmbientShadowColor="@color/white">
+        android:layout_height="wrap_content"
+        android:fitsSystemWindows="true">
 
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="200dp"
+            app:collapsedTitleTextAppearance="@style/TextAppearance.AppCompat.Large"
             app:collapsedTitleTextColor="@color/white"
             app:contentScrim="@color/ppMain"
+            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Display2"
             app:expandedTitleTextColor="@color/white"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
             app:statusBarScrim="@color/ppMain"
             app:titleCollapseMode="scale"
             app:toolbarId="@id/activity_main_toolbar">
 
             <ImageView
-                android:contentDescription="@string/stats_icon_menu"
                 android:id="@+id/main_options_icon"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:contentDescription="@string/stats_icon_menu"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 android:src="@color/ppMain"
                 app:layout_collapseMode="parallax" />
 
-            <androidx.appcompat.widget.Toolbar
+            <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/activity_main_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin">
-
-
-                <!--                <RelativeLayout-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="match_parent">-->
-
-                <!--                    <TextView-->
-                <!--                        android:layout_width="wrap_content"-->
-                <!--                        android:layout_height="wrap_content"-->
-                <!--                        android:layout_centerVertical="true"-->
-                <!--                        android:fontFamily="sans-serif-medium"-->
-                <!--                        android:text="@string/app_name"-->
-                <!--                        android:textColor="@color/white"-->
-                <!--                        android:textSize="20sp" />-->
-                <!--                </RelativeLayout>-->
-            </androidx.appcompat.widget.Toolbar>
+                app:layout_collapseMode="pin" />
 
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
@@ -86,7 +70,7 @@
         android:id="@+id/bottom_navigation_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:itemRippleColor="@color/ppMain"
+        app:itemRippleColor="#728ED6"
         app:labelVisibilityMode="selected"
         app:layout_anchor="@+id/nestedScrollView"
         app:layout_anchorGravity="bottom|center"
